# GravitySimulation

./: CMakeLists.txt  Readme.md  sourcelist.cmake
include/: glType.hpp  mass.hpp  object.hpp  renderer.hpp  shaders.hpp  simulation.hpp  window.hpp
src/: main.cpp  renderer.cpp  simulation.cpp  window.cpp
